<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff2782d9"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:gravity="center_vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/hexTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringHexadecimal"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:padding="5dp" />

    <EditText
        android:id="@+id/hexEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:digits="0123456789ABCDEF"
        android:ems="10"
        android:hint="@string/textDefault"
        android:imeOptions="actionDone"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:singleLine="true"
        android:textColor="#000000"
        android:padding="5dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/decimalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringDecimal"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:padding="5dp" />

    <EditText
        android:id="@+id/decimalEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:ems="10"
        android:hint="@string/textDefault"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:textColor="#000000"
        android:digits="0123456789"
        android:padding="5dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/binaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringBinary"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:padding="5dp" />

    <EditText
        android:id="@+id/binaryEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:digits="01"
        android:ems="10"
        android:hint="@string/textDefault"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:padding="5dp">

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearButtonText"
        android:id="@+id/clearButton"
        android:layout_gravity="center_horizontal"
        android:padding="15dp" />

    <Space
        android:layout_width="20dp"
        android:layout_height="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/developerName"
        android:id="@+id/textView"
        android:textColor="#59000000" />

</LinearLayout>
